use clearfix to prevent float rows from collapsing

--- a/app/scss/_float.scss
+++ b/app/scss/_float.scss
@@ -5,6 +5,7 @@
 	.row {
 		max-width: $content-max-width;
 		margin: 0 auto;
+		@include clearfix;
 
 		* {
 			box-sizing: border-box;
